[tool.poetry]
name = "order"
version = "0.1.0"
description = "order service"
authors = ["Marcio Miranda <marcio.miranda@druid.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
aws-lambda-powertools = "^1.15.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "2.12.0"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"